monitoring/charts/grafana/manifests/app.yml
---
# Source: grafana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana
  
  labels:
    helm.sh/chart: grafana-12.8.0
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/version: "13.1.1"
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: grafana
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: monitoring

---
# Source: grafana/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-grafana
  
  labels:
    helm.sh/chart: grafana-12.8.0
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/version: "13.1.1"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: monitoring
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        helm.sh/chart: grafana-12.8.0
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: monitoring
        app.kubernetes.io/version: "13.1.1"
      annotations:
        checksum/config: f3c34cf027ec8af3495c518ce78a0f97d9c9fcf344b5e2211caf299a8009e99d
        checksum/sc-dashboard-provider-config: e70bf6a851099d385178a76de9757bb0bef8299da6d8443602590e44f05fdf24
        checksum/secret: bdd891a715131da8e9ee49bbf7b16bdfb75eaa367fcbdcedb0270a97b031223d
        kubectl.kubernetes.io/default-container: grafana
    spec:
      
      serviceAccountName: monitoring-grafana
      automountServiceAccountToken: true
      shareProcessNamespace: false
      securityContext:
        fsGroup: 472
        runAsGroup: 472
        runAsNonRoot: true
        runAsUser: 472
      enableServiceLinks: true
      containers:
        - name: grafana
          image: "docker.io/grafana/grafana:13.1.1"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: config
              mountPath: "/etc/grafana/grafana.ini"
              subPath: grafana.ini
            - name: storage
              mountPath: "/var/lib/grafana"
            - name: search
              mountPath: "/var/lib/grafana-search"
            - name: config
              mountPath: "/etc/grafana/provisioning/datasources/datasources.yaml"
              subPath: "datasources.yaml"
            - name: config
              mountPath: "/etc/grafana/provisioning/dashboards/dashboardproviders.yaml"
              subPath: "dashboardproviders.yaml"
            - name: node-exporter-dashboard
              mountPath: "/var/lib/grafana/dashboards/node-exporter.json"
              subPath: "node-exporter.json"
          ports:
            - name: grafana
              containerPort: 3000
              protocol: TCP
            - name: gossip-tcp
              containerPort: 9094
              protocol: TCP
            - name: gossip-udp
              containerPort: 9094
              protocol: UDP
            - name: profiling
              containerPort: 6060
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: grafana
            initialDelaySeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: grafana
          resources:
            limits:
              cpu: 500m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: monitoring-grafana
        - name: storage
          persistentVolumeClaim:
            claimName: monitoring-grafana
        - name: search
          emptyDir: {}
        - name: node-exporter-dashboard
          configMap:
            name: node-exporter

---
# Source: grafana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana
  
  labels:
    helm.sh/chart: grafana-12.8.0
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/version: "13.1.1"
  annotations:
    cert-manager.io/cluster-issuer: "dev-ca-issuer"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - grafana.maxim.local
      secretName: grafana-tls
  rules:
    - host: "grafana.maxim.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
